--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -15,8 +15,8 @@ layout: page
     </a>
   </li>
 </ul>
-<!-- <h2>Essay</h2>
-{% for tag in site.index.showtag %} -->
+<h2>Essay</h2>
+{% for tag in site.index.showtag %}
 <h3>
   {{ tag }}
 </h3>
