--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,9 +4,9 @@ layout: page
 {{ content }}
 <h2>Recent</h2>
 <ul>
-  {% for post in site.posts limit:5 %}
+  {% for post in site.posts limit:2 %}
   <li>
-    <a href="{{ post.url }}">{{ post.title }}</a>, {{ post.date | date_to_string }}
+    <a href="./introduce.pdf">{{ post.title }}</a>, {{ post.date | date_to_string }}
   </li>
   {% endfor %}
   <li>
