--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -6,7 +6,7 @@ layout: page
 <ul>
   <!-- {% for post in site.posts limit:2 %} -->
   <li>
-    <a href="www.baidu.com">{{ post.title }}</a>, {{ post.date | date_to_string }}
+    <a href="{{ post.url }}">{{ post.title }}</a>, {{ post.date | date_to_string }}
   </li>
   <!-- {% endfor %} -->
  <!-- <li>
