--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,19 +2,19 @@
 layout: page
 ---
 {{ content }}
-<h2>Recent</h2>
+<!-- <h2>Recent</h2>
 <ul>
-  <!-- {% for post in site.posts limit:2 %} -->
+  {% for post in site.posts limit:2 %}
   <li>
     <a href="{{ post.url }}">{{ post.title }}</a>, {{ post.date | date_to_string }}
   </li>
-  <!-- {% endfor %} -->
- <!-- <li>
+  {% endfor %}
+ <li>
     <a href="/archive">
       All {{ site.posts.size }} posts...
     </a>
-  </li> -->
-</ul>
+  </li>
+</ul> -->
 <!-- <h2>Essay</h2>
 {% for tag in site.index.showtag %} -->
 <h3>
